--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
 	<meta name="twitter:title" content="Jamal Sir - Preparation Class Schedule"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:site_name" content="Science Aid SSC"/>
-	<meta property="og:url" content="https://hind-sagar-biswas.github.io/kbcQuizzo"/>
+	<meta property="og:url" content="https://ex09.github.io/chemClass"/>
 	<meta property="og:title" content="Jamal Sir - Preparation Class Schedule"/>
 	<meta property="og:description" content="The online version of Science Aid SSC preparation class schedule given by Soyed Jamal Sir."/>
+	<meta property="og:image" content="siteImg.jpeg">
 	<meta name="msapplication-TileColor" content="#333"/>
 	<meta name="theme-color" content="#333"/>
+	
+	<!-- Favicon -->
+	<meta name="msapplication-TileImage" content="images/favicon.png"> <!-- Windows 8 -->
+	<!--[if IE]><link rel="shortcut icon" href="icon.png"><![endif]-->
+	<link rel="icon" type="image/png" href="icon.png">
 	
 	<!--fontawsome-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
